--- a/docs/styles.css
+++ b/docs/styles.css
@@ -11,7 +11,7 @@ body {
   box-sizing: border-box;
   justify-content: center;
   align-items: center;
-  font-family: arial;
+  font-family: 'Averia Libre', cursive;
   font-size: 12px;
   flex-direction: column;
 }
